--- a/index.html
+++ b/index.html
@@ -21,9 +21,57 @@
       </div>
       <div class="main">
         <h3 class="main__header">Выбирай лучшие детские товары</h3>
-        <div class="main__content">UAUA.info проводит голосование среди своих читателей</div>
+        <div class="main__content">
+          <p>
+            UAUA.info проводит голосование среди своих читателей, чтобы выяснить, какие товары для
+            детей в возрасте от 0 до 3-ч лет мамы считают лучшими.
+          </p>
+          <p>
+            Голосование за Лучшие детские товары 2019 будут проходить в 4 этапа:
+          </p>
+        </div>
+        <div class="main__results">
+          <div class="results-number">4</div>
+          <div class="results-text">Подведение итого голосования.</div>
+        </div>
+
+        <div class="main__categories">
+          <div class="first-category">
+            <img src="./img/first square.png" alt="коляска" class="category__img" />
+            <img src="./img/second square.png" alt="коляска" class="category__img" />
+            <div class="category__label label--first">Прогулочные коляски</div>
+          </div>
+          <div class="second-category">
+            <img src="./img/third square.png" alt="коляска" class="category__img " />
+            <img src="./img/fourth square.png" alt="коляска" class="category__img" />
+            <div class="category__label label--second">Коляски трости</div>
+          </div>
+        </div>
+        <div class="main__partners">
+          <h3 class="partners__title">Наши партнеры</h3>
+          <a href="#" class="partners__logo logo-1"></a>
+          <a href="#" class="partners__logo logo-2"></a>
+          <a href="#" class="partners__logo logo-3"></a>
+        </div>
       </div>
-      <div class="footer"></div>
+      <div class="footer">
+        <div class="contacts__link-group">
+          <div class="contacts contacts--adress">
+            Холдинг «Open Media Group»
+          </div>
+          <a href="#" class="contacts contacts__link contacts--mail">info@openmedia.com.ua</a>
+          <div class="contacts contacts--phone">
+            Тел./Факс: +38 (044) 206-11-70
+          </div>
+          <a href="#" class="contacts contacts__link contacts--web">http:/www.uaua.info</a>
+        </div>
+
+        <div class="contacts__btns-group">
+          <button class="contacts__btn btn--facebook"></button>
+          <button class="contacts__btn btn--instagram"></button>
+          <button class="contacts__btn btn--viber"></button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
